--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,13 +16,18 @@ phases:
       - pip install -r requirements.txt
   build:
     commands:
-      - echo "Running tests..."
-      - echo "Building Docker image..."
+      - echo "docker logging"
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
+      - echo "docker build"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/flask-app:latest" .
+      - echo "build completed now pushing image to DOCKER_REGISTRY_URL"
       - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/flask-app:latest"
   post_build:
     commands:
       - echo "Build completed successfully!"
 
+artifacts:
+  files:
+    - '**/*'
+  base-directory: .
 
