--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ hooks:
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/start.container.sh
+    - location: scripts/stop_container.sh
       timeout: 300
       runas: root
 
